syntax = "proto3";

package wft.v1;

option go_package = "github.com/yguilai/pipiao-bot/api/wft/v1;v1";

service Wft {
  rpc GetWarframeMarketItem(NameSearchReq) returns(WmItemResp);
  rpc GetWarframeOfficalItem(NameSearchReq) returns(WarframeItemResp);
  rpc GetWarframeMarketAuction(NameSearchReq) returns(WmItemResp);
}

message NameSearchReq {
  string name = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message WmItemResp {
  message WmItem {
    string id = 1;
    string thumb = 2;
    string urlName = 3;
    string itemName = 4;

    bool vaulted = 5;

    string icon = 6;
    string iconFormat = 7;
    string group = 8;
    string rivenType = 9;
  }
  repeated WmItem items = 1;
}

message WarframeItemResp {
  message WfOfficalItem {
    string id = 1;
    optional string name = 2;
    optional string description = 3;
  }
  repeated WfOfficalItem items = 1;

}